improvement: gallery popup windows is fixed position to make it always visible in browser viewport

--- a/css/less/gallery.less
+++ b/css/less/gallery.less
@@ -37,11 +37,11 @@
   }
 
   .lms-ui-gallery {
+    position: fixed;
     top: 5em;
     bottom: 5em;
     left: 5em;
     right: 5em;
-    position: absolute;
     height: calc(100% - 10em);
     z-index: 91;
 
